--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-    <title>Standup was how long, today?</title>
+    <title>Standup was how long today?</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 </head>
 <body>
     <header>
-        <h1>Standup was <em>how</em> long, today?</h1>
+        <h1>Standup was <em>how</em> long today?</h1>
     </header>
     <div id="chart"></div>
     <footer>
